--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
+      {
+        "src": "/assets/(.*)",
+        "dest": "/assets/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
     ]
   }
   
